force-app/main/default/objects/Body_Part__c/Body_Part__c.object-meta.xml
<CustomObject>
    <description>A section of an Exquisite Corpse drawing, assigned to an individual user</description>
    <label>Body Part</label>
    <nameField>
        <label>Body Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Body Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>