force-app/main/default/objects/Body_Part__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Artist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Body_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>