force-app/main/default/objects/Body_Part__c/fields/Body_Part_Type__c.field-meta.xml
<CustomField>
    <fullName>Body_Part_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Body Part Type</label>
    <referenceTo>Body_Part_Type__c</referenceTo>
    <relationshipLabel>Body Parts</relationshipLabel>
    <relationshipName>Body_Parts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>