force-app/main/default/objects/Body_Part__c/fields/Exquisite_Corpse__c.field-meta.xml
<CustomField>
    <fullName>Exquisite_Corpse__c</fullName>
    <label>Exquisite Corpse</label>
    <referenceTo>Exquisite_Corpse__c</referenceTo>
    <relationshipLabel>Body Parts</relationshipLabel>
    <relationshipName>Body_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>