force-app/main/default/objects/Body_Part__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exquisite_Corpse__c</columns>
    <columns>Body_Part_Type__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Artist__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>